--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
+    "@types/nodemailer": "^6.4.15",
     "@types/pusher-js": "^5.1.0",
     "@uploadcare/react-uploader": "^0.6.1",
     "class-variance-authority": "^0.7.0",
@@ -30,6 +31,8 @@
     "lucide-react": "^0.408.0",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
+    "nodemailer": "^6.9.14",
+    "openai": "^4.55.1",
     "prisma": "^5.16.2",
     "pusher": "^5.2.0",
     "pusher-js": "^8.4.0-rc2",
