added appointment and integration page and portal

--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
+    "@types/date-fns": "^2.6.0",
     "@types/nodemailer": "^6.4.15",
     "@types/pusher-js": "^5.1.0",
+    "@types/react-day-picker": "^5.3.0",
     "@uploadcare/react-uploader": "^0.6.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.408.0",
     "next": "14.2.5",
@@ -37,6 +40,7 @@
     "pusher": "^5.2.0",
     "pusher-js": "^8.4.0-rc2",
     "react": "^18",
+    "react-day-picker": "8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "tailwind-merge": "^2.4.0",
