--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@stripe/react-stripe-js": "^2.8.0",
-    "@stripe/stripe-js": "^4.4.0",
+    "@stripe/stripe-js": "^4.5.0",
     "@types/axios": "^0.14.0",
     "@types/date-fns": "^2.6.0",
     "@types/nodemailer": "^6.4.15",
     "@types/pusher-js": "^5.1.0",
     "@types/react-day-picker": "^5.3.0",
+    "@types/stripe": "^8.0.416",
     "@uploadcare/react-uploader": "^0.6.1",
     "axios": "^1.7.4",
     "class-variance-authority": "^0.7.0",
@@ -48,7 +49,7 @@
     "react-day-picker": "8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
-    "stripe": "^16.8.0",
+    "stripe": "^16.12.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.1",
